2011-08-07  MIYAMUKO Katsuyuki

	* power-uasge 1.3.1 リリース

	* グラフ表示していると Mark がセットされたり、kill-ring にゴミが yank されたり
	していたのを修正 (#6)
	Reported by @jujuria
	https://github.com/miyamuko/power-usage/issues/6

	* *power-usage-enable-status-message* が non-nil で前回取得時から
	値が変わっている場合にはステータスバーに詳細情報を表示するようにした (#7)
	Reported by @jujuria
	https://github.com/miyamuko/power-usage/issues/7

2011-08-06  MIYAMUKO Katsuyuki

	* power-uasge 1.3.0 リリース

2011-07-27  MIYAMUKO Katsuyuki

	* (show-power-usage-graph): 電力各社の状況を一覧でグラフ表示 (#5)
	https://github.com/miyamuko/power-usage/issues/5

2011-07-26  MIYAMUKO Katsuyuki

	* power-uasge 1.2.0 リリース

	* 自動更新の場合はメッセージに詳細情報を表示しないようにした
	M-x update-power-usage で手動で更新した場合は表示する

	* 最新情報の取得に対応 (#3)
	- 東京電力の場合も Yahoo 電力使用状況 API を利用するように変更
	- power 構造体から Yahoo API が対応していない以下のスロットを削除
	  - :entryfor
	  - :capacity-updated
	  - :capacity-peak-period
	  - :usage-updated
	  - :saving-p
	- *power-usage-mode-line-format*, *power-usage-datetime-format* から
	  計画停電の情報を削除
	- tepco-usage-api は list-latest-power-usage, list-power-usage-at
	  のみで利用
	- 自動更新の間隔のデフォルト値を変更: 30 分 => 5 分
	https://github.com/miyamuko/power-usage/issues/3

	* Yahoo 電力使用状況 API を利用して中部と九州の電力使用状況に対応 (#2)
	(setf *power-usage-area* :chubu)
	(setf *power-usage-area* :kyushu)
	https://github.com/miyamuko/power-usage/issues/2
	http://pr.yahoo.co.jp/release/2011/0714a.html
	http://developer.yahoo.co.jp/webapi/shinsai/setsuden/v1/latestpowerusage.html

2011-07-15  MIYAMUKO Katsuyuki

	* power-uasge 1.1.1 リリース

	* ダンプからロードしたときに動かなくなっていたのを修正
	https://github.com/miyamuko/power-usage/issues/1

2011-07-05  MIYAMUKO Katsuyuki

	* (get-latest-power-usage, get-power-usage-at, list-latest-power-usage)
	(list-power-usage-at, update-power-usage): 引数に地域を指定できるようにした

	* (list-latest-power-usage, list-power-usage-at): 関西と東北の場合、
	未サポートエラーを通知するようにした

2011-07-04  MIYAMUKO Katsuyuki

	* power-uasge 1.1.0 リリース

	* 自動更新の間隔のデフォルト値を変更: １時間 => 30 分

	* Yahoo 電力使用状況 API を利用して東北と関西の電力使用状況に対応
	(setf *power-usage-area* :kansai)