@@ -1,3 +1,8 @@
+2011-08-09  MIYAMUKO Katsuyuki
+
+	* ミニバッファにカーソルがある状態で更新するとエラーになる問題を修正 (#11)
+	https://github.com/miyamuko/power-usage/issues/11
+
 2011-08-07  MIYAMUKO Katsuyuki
 
 	* power-uasge 1.3.1 リリース
